fix shifting layout when button is on focus

--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ button:active {
 }
 
 button:focus {
-    background-color: var(--green-700);
     outline: .2rem solid var(--green-500);
+    outline-offset: .05rem;
 }
 
 @keyframes press {
